package Exercice1;

public interface NotificationStrategy {    
    public void sendNotification(String message,boolean critique); 
}
