package Exercice1;

public interface UserState {
    public void handle(NotificationStrategy strategy, String message);
}
